# sec_bot

./: .gitignore  README.md  ds  keys.sh  keys.txt
OpenCV/: multi_ball_tracker.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ball_tracker/lib/ball_tracker/: image_publisher  image_subscriber  multi_ball_tracker  (+1 more)
log/: latest_build
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/log/: latest_build
src/ball_tracker/: CMakeLists.txt  package.xml  setup.py
src/ball_tracker/ball_tracker/: follow_ball.py  image_publisher.py  image_subscriber.py  multi_ball_tracker.py  sim_multi_ball_tracker.py
src/ball_tracker/ball_tracker/OpenCV/: multi_ball_tracker.py
src/ball_tracker/ball_tracker/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ball_tracker/ball_tracker/log/: latest_build
src/ball_tracker/config/: RGB-D.yaml  stereo.yaml
src/ball_tracker/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ball_tracker/install/ball_tracker/lib/ball_tracker/: my_node
src/ball_tracker/install/ball_tracker/share/ball_tracker/: package.sh  package.xml
src/ball_tracker/launch/: camera.launch.py  follow_ball.launch.py  orb_slam2_stereo.launch.py  sim_cam.launch.py
src/ball_tracker/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ball_tracker/launch/log/: latest_build
src/ball_tracker/log/: latest_build
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/sec25_bot/: README.md  package.xml
src/sec_bot/: CMakeLists.txt  README.md  package.xml  setup.py
src/sec_bot/config/: controllers.yaml  my_controllers.yaml  view_bot.rviz
src/sec_bot/description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  message.txt  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  urdf_help  urdf_help.txt
src/sec_bot/externalRepos/: temp.txt
src/sec_bot/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/sec_bot/launch/: ball_tracker_launch.py  camera.launch.py  launch_sim.launch.py  rsp.launch.py  sec_bot.launch
src/sec_bot/log/: latest_build
src/sec_bot/models/: purple_ball.sdf
src/sec_bot/purple_tracker/: package.xml  setup.cfg  setup.py
src/sec_bot/src/: package.xml  setup.py
src/sec_bot/src/launch_files/: CMakeLists.txt  package.xml  setup.py
src/sec_bot/src/launch_files/launch/: demo.launch.yaml  multi_ball_tester.launch.yaml
src/sec_bot/src/sec_bot_vision/: CMakeLists.txt  image_publisher.py  image_subscriber.py  init.py  multi_ball_tracker.py  package.xml
src/sec_bot/src/sec_bot_vision/src/: multi_ball_tracker.py
src/sec_bot/worlds/: empty.world
(+118 files in other folders)
