<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ball_tracker</name>
  <version>0.0.0</version>
  <description>Ball tracking and following system using ROS2 I guess HAHA</description>
  <maintainer email="peyton0330@gmail.com">peyton</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>orb_slam2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <resource>config/RGB-D.yaml</resource>
    <resource>config/Vocabulary/ORBvoc.txt</resource>
  </export>
</package>
